Bit-Project/manifests/v2/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: crypto-exchange
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django
        image: engksa75/test-bit:latest
        ports:
        - containerPort: 8000
        - containerPort: 8001
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        #### TEMPORARILY
        #livenessProbe:
        #  httpGet:
        #    path: /
        #   port: 8000
        #  initialDelaySeconds: 90
        #  periodSeconds: 30
        #  timeoutSeconds: 10
        #readinessProbe:
        #  httpGet:
        #    path: /
        #    port: 8000
        # initialDelaySeconds: 60
        #  periodSeconds: 10
        #  timeoutSeconds: 5
