Bit-Project/manifests/v2/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: crypto-exchange
spec:
  selector:
    app: django-app
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  - port: 8001
    targetPort: 8001
    protocol: TCP
  type: ClusterIP
