Bit-Project/manifests/v2/external-db-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-postgres-service
  namespace: crypto-exchange
subsets:
- addresses:
  - ip: 91.107.171.123
  ports:
  - port: 5432
    protocol: TCP
