Bit-Project/manifests/v2/external-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-postgres-service
  namespace: crypto-exchange
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
